--- a/nieruchomości/Views/Admin/Offers.cshtml
+++ b/nieruchomości/Views/Admin/Offers.cshtml
@@ -49,7 +49,7 @@
                             }
 
                             <tr class="@clas">
-                                <td style="vertical-align:middle">@ad.CreatedAt</td>
+                                <td style="vertical-align:middle">@ad.CreatedAt.ToShortDateString()</td>
                                 <td style="vertical-align:middle">@ad.FullName</td>
                                 <td style="vertical-align:middle">@ad.Email</td>
                                 <td style="vertical-align:middle">@ad.AdType</td>
