--- a/nieruchomości/Views/Home/Contact.cshtml
+++ b/nieruchomości/Views/Home/Contact.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
-        <h4>Dodaj bezpłatnie ofertę</h4>
+        <h4>Szybki kontakt</h4>
 
 
         <div class="col-md-12">
@@ -62,7 +62,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <small>Nr. Telefonu</small>
+                                            <small>Telefon</small>
                                             @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("PhoneNumber") && ViewData.ModelState["PhoneNumber"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                                         </div>
                                     </div>
