--- a/nieruchomości/Views/Home/_ContactForm.cshtml
+++ b/nieruchomości/Views/Home/_ContactForm.cshtml
@@ -36,7 +36,7 @@
 
         <div class="row" style="margin-bottom:5px">
             <div class="col-md-4">
-                <sup><b style="font-size: 14px; color: red">*</b></sup><small>E-mail:</small>
+                <sup><b style="font-size: 14px; color: red">*</b></sup><small>Email:</small>
             </div>
             <div class="col-md-8">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @style = "max-width: none" } })
