--- a/nieruchomości/Views/Shared/_Layout.cshtml
+++ b/nieruchomości/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
                     <small>zalogowano jako <strong>@HttpContext.Current.User.Identity.Name</strong></small>
                 </div>
                 <div class="col-md-6" style="text-align: right;">
+                    <a role="button" class="btn btn-xs btn-default" href="/Admin" style="margin-right:5px">Panel admina</a>
                     <small><strong><a style="color:black" href="/Admin/Login">Wyloguj</a></strong></small>
                 </div>
             </div>
@@ -100,7 +101,7 @@
                         <li class="custom-list"><a href="/Home/Index">Strona główna</a></li>
                         <li class="custom-list"><a href="/Home/About">O firmie</a></li>
                         <li class="custom-list"><a href="/Home/Credits">Kredyty</a></li>
-                        <li class="custom-list"><a href="/Home/Contact">Szybki kontakt</a></li>
+                        <li class="custom-list"><a href="/Home/Contact">Napisz czego szukasz</a></li>
                     </ul>
                 </div>
             </div>
