--- a/nieruchomości/Views/Admin/EditLand.cshtml
+++ b/nieruchomości/Views/Admin/EditLand.cshtml
@@ -83,10 +83,19 @@
                     <div class="row">
                         <div class="col-md-12">
                             <small>Zdjęcia:</small>
-                            <input type="file" multiple class="form-control" id="Files" name="Files"/>
+                            <div class="row">
+                                @foreach (var photo in Model.Pictures)
+                                {
+                                    <div class="col-md-4">
+                                        <img src="/Content/Photos/@photo.Link" style="width: 100%; margin-bottom: 10px" class="existsPhotos" data-id="@photo.Id" />
+                                    </div>
+                                }
+                            </div>
+                            <input type="file" multiple class="form-control" id="Files" name="Files" style="max-width: none" />
+                            @Html.ListBoxFor(model => model.ToDeleted, new SelectList(new List<int>()), new { @class = "form-control", @style = "max-width:none; height: 100px" })
                         </div>
                     </div>
-                    <input type="hidden" id="AdType" name="AdType" value="House"/>
+                    <input type="hidden" id="AdType" name="AdType" value="Flat" />
                     <div class="row">
                         <div class="col-md-12" style="text-align: center; margin-top: 10px">
                             <button type="submit" class="btn btn-xs btn-success" style="width: 150px">Zapisz</button>
@@ -98,3 +107,35 @@
         </div>
     }
 </div>
+
+<style type="text/css">
+    .existsPhotos {
+        cursor: pointer;
+    }
+</style>
+
+<script src="/Scripts/jquery-1.10.2.js"></script>
+<script language="javascript">
+    $("#ToDeleted").hide();
+    var toDeleted = [];
+    $(".existsPhotos").on("click", function () {
+        if ($(this).hasClass("grayscale")) {
+            $(this).removeClass("grayscale");
+            var photos = $(".photoItem");
+            for (var i = 0; i < photos.length; i++) {
+                if (photos[i].value == $(this).data("id")) {
+                    photos[i].remove();
+                };
+            }
+        } else {
+            $(this).addClass("grayscale");
+            toDeleted.push($(this).data("id"));
+            var option = document.createElement("option");
+            option.value = $(this).data("id");
+            option.text = $(this).data("id");
+            $(option).addClass("photoItem");
+            $("#ToDeleted").append(option);
+        };
+        $(".photoItem").prop("selected", true);
+    })
+</script>
