--- a/nieruchomości/Views/Admin/EditWorker.cshtml
+++ b/nieruchomości/Views/Admin/EditWorker.cshtml
@@ -8,7 +8,7 @@
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
         @Html.Partial("AdminMenu")
-        <h4>Dodaj pracownika</h4>
+        <h4>Edytuj pracownika</h4>
         @if (!ViewData.ModelState.IsValid)
         {
             <div class="row" style="padding: 10px">
