--- a/nieruchomości/Views/Admin/Workers.cshtml
+++ b/nieruchomości/Views/Admin/Workers.cshtml
@@ -41,7 +41,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model.Workers)
+                @foreach (var item in Model.Workers.OrderByDescending(x => x.CreatedAt))
                 {
                     <tr>
                         <td>
