--- a/nieruchomości/Views/Admin/_AddHouse.cshtml
+++ b/nieruchomości/Views/Admin/_AddHouse.cshtml
@@ -65,7 +65,7 @@
                     </div>
                     <div class="col-md-6">
                         <small>Liczba pokoi:</small>
-                        @Html.EditorFor(model => model.Rooms, new { htmlAttributes = new { @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Rooms") && ViewData.ModelState["Rooms"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                        @Html.EditorFor(model => model.Rooms, new { htmlAttributes = new {@type="number", @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Rooms") && ViewData.ModelState["Rooms"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                     </div>
                 </div>
                 <div class="row">
@@ -75,7 +75,7 @@
                     </div>
                     <div class="col-md-6">
                         <small>Czynsz:</small>
-                        @Html.EditorFor(model => model.Rent, new { htmlAttributes = new { @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Rent") && ViewData.ModelState["Rent"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                        @Html.EditorFor(model => model.Rent, new { htmlAttributes = new {@class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Rent") && ViewData.ModelState["Rent"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                     </div>
                 </div>
                 <div class="row">
