--- a/nieruchomości/Views/Admin/_addFlat.cshtml
+++ b/nieruchomości/Views/Admin/_addFlat.cshtml
@@ -54,7 +54,7 @@
                     </div>
                     <div class="col-md-6">
                         <small>Kondygnacja:</small>
-                        @Html.EditorFor(model => model.Storey, new { htmlAttributes = new { @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Storey") && ViewData.ModelState["Storey"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                        @Html.EditorFor(model => model.Storey, new { htmlAttributes = new { @type="number", @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Storey") && ViewData.ModelState["Storey"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                     </div>
                 </div>
                 <div class="row">
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-md-6">
                         <small>Liczba pokoi:</small>
-                        @Html.EditorFor(model => model.Rooms, new { htmlAttributes = new { @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Rooms") && ViewData.ModelState["Rooms"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                        @Html.EditorFor(model => model.Rooms, new { htmlAttributes = new { @type="number", @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Rooms") && ViewData.ModelState["Rooms"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                     </div>
                 </div>
                 <div class="row">
