--- a/nieruchomości/Views/Admin/AddWorker.cshtml
+++ b/nieruchomości/Views/Admin/AddWorker.cshtml
@@ -43,8 +43,9 @@
                         <div class="control-label col-md-2" style="font-size: small">
                             Imię
                         </div>
-                        <div class="col-md-10" style="margin-bottom: 3px">
+                        <div class="col-md-10 has-feedback" style="margin-bottom: 3px">
                             @Html.EditorFor(model => model.FirstName, new {htmlAttributes = new {@class = "form-control", @style = "max-width: none" + ((ViewData.ModelState.ContainsKey("FirstName") && ViewData.ModelState["FirstName"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
+                            <span class="glyphicon-small glyphicon-asterisk form-control-feedback" aria-hidden="true" style="color: red"></span>
                         </div>
                     </div>
 
@@ -52,8 +53,9 @@
                         <div class="control-label col-md-2" style="font-size: small">
                             Nazwisko
                         </div>
-                        <div class="col-md-10" style="margin-bottom: 3px">
+                        <div class="col-md-10 has-feedback" style="margin-bottom: 3px">
                             @Html.EditorFor(model => model.LastName, new {htmlAttributes = new {@class = "form-control", @style = "max-width: none" + ((ViewData.ModelState.ContainsKey("LastName") && ViewData.ModelState["LastName"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
+                            <span class="glyphicon-small glyphicon-asterisk form-control-feedback" aria-hidden="true" style="color: red"></span>
                         </div>
                     </div>
 
@@ -61,8 +63,9 @@
                         <div class="control-label col-md-2" style="font-size: small">
                             Tel. 1)
                         </div>
-                        <div class="col-md-10" style="margin-bottom: 3px">
+                        <div class="col-md-10 has-feedback" style="margin-bottom: 3px">
                             @Html.EditorFor(model => model.PhoneFirst, new {htmlAttributes = new {@class = "form-control", @style = "max-width: none" + ((ViewData.ModelState.ContainsKey("PhoneFirst") && ViewData.ModelState["PhoneFirst"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
+                            <span class="glyphicon-small glyphicon-asterisk form-control-feedback" aria-hidden="true" style="color: red"></span>
                         </div>
                     </div>
 
@@ -79,8 +82,9 @@
                         <div class="control-label col-md-2" style="font-size: small">
                             Email
                         </div>
-                        <div class="col-md-10" style="margin-bottom: 3px">
+                        <div class="col-md-10 has-feedback" style="margin-bottom: 3px">
                             @Html.EditorFor(model => model.Email, new {htmlAttributes = new {@class = "form-control", @style = "max-width: none" + ((ViewData.ModelState.ContainsKey("Email") && ViewData.ModelState["Email"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
+                            <span class="glyphicon-small glyphicon-asterisk form-control-feedback" aria-hidden="true" style="color: red"></span>
                         </div>
                     </div>
                     <div class="form-group-sm row">
