--- a/nieruchomości/Views/Home/Contact.cshtml
+++ b/nieruchomości/Views/Home/Contact.cshtml
@@ -53,11 +53,17 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <small>Imię i nazwisko</small>
-                                            @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("FullName") && ViewData.ModelState["FullName"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                                            <div class="has-feedback">
+                                                @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("FullName") && ViewData.ModelState["FullName"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                                                <span class="glyphicon-small glyphicon-asterisk form-control-feedback" aria-hidden="true" style="right:0"></span>
+                                            </div>
                                         </div>
                                         <div class="col-md-6">
                                             <small>Email</small>
-                                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Email") && ViewData.ModelState["Email"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                                            <div class="has-feedback">
+                                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Email") && ViewData.ModelState["Email"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                                                <span class="glyphicon-small glyphicon-asterisk form-control-feedback" aria-hidden="true" style="right:0"></span>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -73,7 +79,10 @@
                                     Napisz czego szukasz
                                 </div>
                                 <div class="custom-advert-panel-body">
-                                    @Html.TextAreaFor(model => model.Body, new { @class = "form-control", @style = "max-width:none; height: 200px" + ((ViewData.ModelState.ContainsKey("Body") && ViewData.ModelState["Body"].Errors.Count > 0) ? ";border: 2px solid red" : "") })
+                                    <div class="has-feedback">
+                                        @Html.TextAreaFor(model => model.Body, new { @class = "form-control", @style = "max-width:none; height: 200px" + ((ViewData.ModelState.ContainsKey("Body") && ViewData.ModelState["Body"].Errors.Count > 0) ? ";border: 2px solid red" : "") })
+                                        <span class="glyphicon-small glyphicon-asterisk form-control-feedback" aria-hidden="true" style="right:0"></span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row" style="text-align:center">
