--- a/nieruchomości/Views/Admin/Message.cshtml
+++ b/nieruchomości/Views/Admin/Message.cshtml
@@ -58,7 +58,7 @@
                         </div>
                         <div class="custom-advert-panel-body">
                             <div class="row" style="margin-bottom: 10px">
-                                <div class="col-md-12">
+                                <div class="col-md-12" style="word-wrap: break-word">
                                     @String.Format("{0}", (Model.Body.IsNullOrWhiteSpace()) ? "---" : Model.Body)
                                 </div>
                             </div>
