--- a/nieruchomości/Views/Admin/Worker.cshtml
+++ b/nieruchomości/Views/Admin/Worker.cshtml
@@ -33,7 +33,7 @@
                 <div class="col-md-6" style="text-align:right">
                     @if (Model.HasPhoto)
                     {
-                        <img src="/Content/Photos/Workers/@Model.Photo"/>
+                        <img src="/Content/Photos/Workers/@Model.Photo" style="width: 100%"/>
                     }
                     else
                     {
