--- a/nieruchomości/Views/Home/ConfirmOffer.cshtml
+++ b/nieruchomości/Views/Home/ConfirmOffer.cshtml
@@ -44,7 +44,7 @@
                             <div class="panel-body">
                                 <div class="row" style="margin-bottom: 10px">
                                     <div class="col-md-6">
-                                        <small>Cena:</small><br/>
+                                        <small>Cena (zł):</small><br/>
                                         @String.Format("{0}", (Model.Price.IsNullOrWhiteSpace()) ? "---" : Model.Price)
                                     </div>
                                     <div class="col-md-6">
