--- a/nieruchomości/Views/Home/Index.cshtml
+++ b/nieruchomości/Views/Home/Index.cshtml
@@ -172,7 +172,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <p class="custom-advert-description" style="height: 100px; overflow-y:scroll">{{flat.Description}}</p>
+                                    <p class="custom-advert-description" style="height: 100px; overflow-y:scroll; word-wrap: break-word">{{flat.Description}}</p>
                                 </div>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <p class="custom-advert-description" style="height: 100px; overflow-y:scroll">{{house.Description}}</p>
+                                    <p class="custom-advert-description" style="height: 100px; overflow-y:scroll; word-wrap: break-word">{{house.Description}}</p>
                                 </div>
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <p class="custom-advert-description" style="height: 100px; overflow-y:scroll">{{land.Description}}</p>
+                                    <p class="custom-advert-description" style="height: 100px; overflow-y:scroll; word-wrap: break-word">{{land.Description}}</p>
                                 </div>
                             </div>
                         </div>
