--- a/nieruchomości/Views/Home/_ShowHouse.cshtml
+++ b/nieruchomości/Views/Home/_ShowHouse.cshtml
@@ -47,7 +47,7 @@
 
                     <div class="row custom-advert-price">
                         <div class="col-md-5">Cena:</div>
-                        <div class="col-md-7">@Model.Price</div>
+                        <div class="col-md-7">@Model.Price zł</div>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                     <div class="custom-advert-panel-title">
                         Opis
                     </div>
-                    <p class="custom-advert-panel-body">
+                    <p class="custom-advert-panel-body" style="word-wrap: break-word">
                         @Model.Description
                     </p>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="custom-advert-panel-title">
                         Szczegóły
                     </div>
-                    <p class="custom-advert-panel-body">
+                    <p class="custom-advert-panel-body" style="word-wrap: break-word">
                         @Model.Details
                     </p>
                 </div>
