--- a/nieruchomości/Views/Admin/EditFlat.cshtml
+++ b/nieruchomości/Views/Admin/EditFlat.cshtml
@@ -3,26 +3,20 @@
 
 <div class="col-md-12 custom-center-panel">
     <h4>Edytuj mieszkanie</h4>
-    @if (!ViewData.ModelState.IsValid)
-    {
-        <div class="row" style="padding: 10px">
-            <div class="alert alert-dismissable alert-danger">
-                <button type="button" class="close" data-dismiss="alert">×</button>
-                <strong>Błąd</strong> @Html.ValidationSummary()
-                @{
-                    var errors = ViewData.ModelState.Values.Count(x => x.Errors.Count > 0);
-                    var all = ViewData.ModelState.Keys.Count;
-
-                    var errors_p = (int) (((float) errors/(float) all)*100);
-
-                }
-                <div class="progress progress-striped active" style="background-color: #e74c3c">
-                    <div class="progress-bar progress-bar-success" style="width: @(100 - errors_p)%"></div>
-                    <div class="progress-bar progress-bar-danger" style="width: @(errors_p)%"></div>
-                </div>
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="row" style="padding: 10px">
+        <div class="panel panel-danger">
+            <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
+            <div class="panel-heading">
+                Błąd
+            </div>
+            <div class="panel-body">
+                @Html.ValidationSummary()
             </div>
         </div>
-    }
+    </div>
+}
     @using (Html.BeginForm("EditFlat", "Admin", FormMethod.Post, new {enctype = "multipart/form-data"}))
     {
         Html.AntiForgeryToken();
@@ -38,7 +32,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <small><b>Cena:</b></small>
+                            <small><b>Cena (zł):</b></small>
                             <div class="has-feedback">
                                 @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Price") && ViewData.ModelState["Price"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                                 <span class="glyphicon-small glyphicon-asterisk form-control-feedback" aria-hidden="true" style="right:0; color: red"></span>
@@ -95,7 +89,7 @@
                             @Html.EditorFor(model => model.Ownership, new {htmlAttributes = new {@class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Ownership") && ViewData.ModelState["Ownership"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
                         </div>
                         <div class="col-md-6">
-                            <small>Cena za m<sup>2</sup>:</small>
+                            <small>Cena za m<sup>2</sup> (zł):</small>
                             @Html.EditorFor(model => model.PricePerMeter, new {htmlAttributes = new {@class = "form-control", @style = ((ViewData.ModelState.ContainsKey("PricePerMeter") && ViewData.ModelState["PricePerMeter"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
                         </div>
                     </div>
