--- a/nieruchomości/Views/Home/Contact.cshtml
+++ b/nieruchomości/Views/Home/Contact.cshtml
@@ -9,26 +9,20 @@
 
 
         <div class="col-md-12">
-            @if (!ViewData.ModelState.IsValid)
-            {
-                <div class="row" style="padding: 10px">
-                    <div class="alert alert-dismissable alert-danger">
-                        <button type="button" class="close" data-dismiss="alert">×</button>
-                        <strong>Błąd</strong> @Html.ValidationSummary()
-                        @{
-                var errors = ViewData.ModelState.Values.Count(x => x.Errors.Count > 0);
-                var all = ViewData.ModelState.Keys.Count;
-
-                var errors_p = (int)(((float)errors / (float)all) * 100);
-
-                        }
-                        <div class="progress progress-striped active" style="background-color:#e74c3c">
-                            <div class="progress-bar progress-bar-success" style="width: @(100-errors_p)%"></div>
-                            <div class="progress-bar progress-bar-danger" style="width: @(errors_p)%"></div>
-                        </div>
-                    </div>
-                </div>
-            }
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="row" style="padding: 10px">
+        <div class="panel panel-danger">
+            <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
+            <div class="panel-heading">
+                Błąd
+            </div>
+            <div class="panel-body">
+                @Html.ValidationSummary()
+            </div>
+        </div>
+    </div>
+}
 
             <div class="row">
                 <div class="col-md-6" style="padding-left:0px">
