--- a/nieruchomości/Views/Home/CreateOffer.cshtml
+++ b/nieruchomości/Views/Home/CreateOffer.cshtml
@@ -9,26 +9,20 @@
 
 
         <div class="col-md-12">
-            @if (!ViewData.ModelState.IsValid)
-            {
-                <div class="row" style="padding: 10px">
-                    <div class="alert alert-dismissable alert-danger">
-                        <button type="button" class="close" data-dismiss="alert">×</button>
-                        <strong>Błąd</strong> @Html.ValidationSummary()
-                        @{
-                var errors = ViewData.ModelState.Values.Count(x => x.Errors.Count > 0);
-                var all = ViewData.ModelState.Keys.Count;
-
-                var errors_p = (int)(((float)errors / (float)all) * 100);
-
-                        }
-                        <div class="progress progress-striped active" style="background-color:#e74c3c">
-                            <div class="progress-bar progress-bar-success" style="width: @(100-errors_p)%"></div>
-                            <div class="progress-bar progress-bar-danger" style="width: @(errors_p)%"></div>
-                        </div>
-                    </div>
-                </div>
-            }
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="row" style="padding: 10px">
+        <div class="panel panel-danger">
+            <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
+            <div class="panel-heading">
+                Błąd
+            </div>
+            <div class="panel-body">
+                @Html.ValidationSummary()
+            </div>
+        </div>
+    </div>
+}
 
             <div class="row">
                 <div class="col-md-6" style="padding-left: 0px">
@@ -87,7 +81,7 @@
                                 <div class="custom-advert-panel-body">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <small>Cena</small>
+                                            <small>Cena (zł):</small>
                                             @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Price") && ViewData.ModelState["Price"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                                         </div>
                                         <div class="col-md-6">
