--- a/nieruchomości/Views/Home/_ShowLand.cshtml
+++ b/nieruchomości/Views/Home/_ShowLand.cshtml
@@ -41,7 +41,7 @@
 
                     <div class="row custom-advert-price">
                         <div class="col-md-5">Cena:</div>
-                        <div class="col-md-7">@Model.Price</div>
+                        <div class="col-md-7">@Model.Price zł</div>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                     <div class="custom-advert-panel-title">
                         Opis
                     </div>
-                    <p class="custom-advert-panel-body">
+                    <p class="custom-advert-panel-body" style="word-wrap: break-word">
                         @Model.Description
                     </p>
                 </div>
@@ -90,7 +90,7 @@
                     <div class="custom-advert-panel-title">
                         Szczegóły
                     </div>
-                    <p class="custom-advert-panel-body">
+                    <p class="custom-advert-panel-body" style="word-wrap: break-word">
                         @Model.Details
                     </p>
                 </div>
