--- a/nieruchomości/Views/Admin/AdList.cshtml
+++ b/nieruchomości/Views/Admin/AdList.cshtml
@@ -57,7 +57,7 @@
                                 Data (od-do):
                             </div>
                             <div class="col-md-3" style="font-size:small; font-weight:bold">
-                                Typ oferty:
+                                Rodzaj nieruchomości:
                             </div>
                         </div>
                         <div class="row">
@@ -149,7 +149,7 @@
                             Data dodania
                         </th>
                         <th>
-                            Typ
+                            Rodzaj
                         </th>
                         <th>
                             Tytuł
